changed some images, did more styling

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
 		<table class="buildings-table">
 			<tr>
-				<td><img class="building-picture" src="images/juicer.jpg"></td>
-				<td>
+				<td class="column-1"><img class="building-picture" src="images/juicer.jpg"></td>
+				<td class="column-2">
 					<div class="building-name">Juicer</div>
 					<div class="cost" id="juicer-cost"></div>
 				</td>
 				<td class="column-3"><button id="juicer-button">+</button>
 			</tr>
 			<tr>
-				<td><img class="building-picture" src="images/farm.jpg"></td>
-				<td>
+				<td class="column-1"><img class="building-picture" src="images/farm.jpg"></td>
+				<td class="column-2">
 					<div class="building-name">Farm</div>
 					<div class="cost" id="cost"></div>
 				</td>
