Made significant progress on html

--- a/index.html
+++ b/index.html
@@ -13,22 +13,87 @@
         <div class="statistics">placeholder text</div>
 
 		<table class="buildings-table">
+
+			<!-- Juicer -->
 			<tr>
 				<td class="column-1"><img class="building-picture" src="images/juicer.jpg"></td>
 				<td class="column-2">
 					<div class="building-name">Juicer</div>
-					<div class="cost" id="juicer-cost"></div>
+					<div class="cost">Cost: <span id="juicer-cost">20</span> TJ</div>
 				</td>
 				<td class="column-3"><button id="juicer-button">+</button>
 			</tr>
+
+			<!-- Farm -->
 			<tr>
 				<td class="column-1"><img class="building-picture" src="images/farm.jpg"></td>
 				<td class="column-2">
 					<div class="building-name">Farm</div>
-					<div class="cost" id="cost"></div>
+					<div class="cost" id="farm-cost"></div>
 				</td>
 				<td class="column-3"><button id="farm-button">+</button>
 			</tr>
+
+			<!-- Factory -->
+			<tr>
+				<td class="column-1"><img class="building-picture" src="images/factory.png"></td>
+				<td class="column-2">
+					<div class="building-name">Factory</div>
+					<div class="cost" id="factory-cost"></div>
+				</td>
+				<td class="column-3"><button id="factory-button">+</button>
+			</tr>
+
+			<!-- Tony Juice Inc. -->
+			<tr>
+				<td class="column-1"><img class="building-picture" src="images/office.png"></td>
+				<td class="column-2">
+					<div class="building-name">Tony Juice Inc.</div>
+					<div class="cost" id="office-cost"></div>
+				</td>
+				<td class="column-3"><button id="office-button">+</button>
+			</tr>
+
+			<!-- Literally Elon Musk -->
+			<tr>
+				<td class="column-1"><img class="building-picture" src="images/elon.png"></td>
+				<td class="column-2">
+					<div class="building-name">Literally Elon Musk</div>
+					<div class="cost" id="elon-cost"></div>
+				</td>
+				<td class="column-3"><button id="elon-button">+</button>
+			</tr>
+
+			<!-- Tony Juice Kingdom -->
+			<tr>
+				<td class="column-1"><img class="building-picture" src="images/crown.png"></td>
+				<td class="column-2">
+					<div class="building-name">Tony Juice Kingdom</div>
+					<div class="cost" id="kingdom-cost"></div>
+				</td>
+				<td class="column-3"><button id="kingdom-button">+</button>
+			</tr>
+
+			<!-- Juice Planet -->
+			<tr>
+				<td class="column-1"><img class="building-picture" src="images/planet.jpg"></td>
+				<td class="column-2">
+					<div class="building-name">Juice Planet</div>
+					<div class="cost" id="planet-cost"></div>
+				</td>
+				<td class="column-3"><button id="planet-button">+</button>
+			</tr>
+
+			<!-- Artificial Intelligence -->
+			<tr>
+				<td class="column-1"><img class="building-picture" src="images/ai.png"></td>
+				<td class="column-2">
+					<div class="building-name">Artificial Intelligence</div>
+					<div class="cost" id="ai-cost"></div>
+				</td>
+				<td class="column-3"><button id="ai-button">+</button>
+			</tr>
+
 		</table>
 
 		<div class="copyright">Original Tony Juice Clicker Concept by Tony Ngumah & Gabe Carrascoso. Remake by Keeran Sivaneri.</div>
