--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 	<body>
 		<h1 class="title">Tony Juice Clicker 2.0</h1>
 
-        <div class="statistics">placeholder text</div>
-
 		<table class="buildings-table">
 
 			<!-- Juicer -->
 			<tr>
 				<td class="column-1"><img class="building-picture" src="images/juicer.jpg"></td>
 				<td class="column-2">
-					<div class="building-name">Juicer</div>
+					<div class="building-name">Juicer x
+						<span id="juicer-quantity">0</span>
+					</div>
 					<div class="cost">Cost: <span id="juicer-cost">20</span> TJ</div>
+					<div class="building-production">Each Juicer produces <span id="juicer-production-alone">0</span> TJ for a total of <span id="juicer-production-total">0</span> TJ.</div>
 				</td>
-				<td class="column-3"><button id="juicer-button">+</button>
 			</tr>
 
 			<!-- Farm -->
@@ -31,7 +31,6 @@
 					<div class="building-name">Farm</div>
 					<div class="cost" id="farm-cost"></div>
 				</td>
-				<td class="column-3"><button id="farm-button">+</button>
 			</tr>
 
 			<!-- Factory -->
@@ -41,7 +40,6 @@
 					<div class="building-name">Factory</div>
 					<div class="cost" id="factory-cost"></div>
 				</td>
-				<td class="column-3"><button id="factory-button">+</button>
 			</tr>
 
 			<!-- Tony Juice Inc. -->
@@ -51,7 +49,6 @@
 					<div class="building-name">Tony Juice Inc.</div>
 					<div class="cost" id="office-cost"></div>
 				</td>
-				<td class="column-3"><button id="office-button">+</button>
 			</tr>
 
 			<!-- Literally Elon Musk -->
@@ -61,7 +58,6 @@
 					<div class="building-name">Literally Elon Musk</div>
 					<div class="cost" id="elon-cost"></div>
 				</td>
-				<td class="column-3"><button id="elon-button">+</button>
 			</tr>
 
 			<!-- Tony Juice Kingdom -->
@@ -71,7 +67,6 @@
 					<div class="building-name">Tony Juice Kingdom</div>
 					<div class="cost" id="kingdom-cost"></div>
 				</td>
-				<td class="column-3"><button id="kingdom-button">+</button>
 			</tr>
 
 			<!-- Juice Planet -->
@@ -81,7 +76,6 @@
 					<div class="building-name">Juice Planet</div>
 					<div class="cost" id="planet-cost"></div>
 				</td>
-				<td class="column-3"><button id="planet-button">+</button>
 			</tr>
 
 			<!-- Artificial Intelligence -->
@@ -91,7 +85,6 @@
 					<div class="building-name">Artificial Intelligence</div>
 					<div class="cost" id="ai-cost"></div>
 				</td>
-				<td class="column-3"><button id="ai-button">+</button>
 			</tr>
 
 		</table>
