added costs for all buildings

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 				<td class="column-1"><img class="building-picture" src="images/juicer.jpg"></td>
 				<td class="column-2">
 					<div class="building-name">Juicer x
-						<span id="juicer-quantity">0</span>
+						<span class="quantity" id="juicer-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="juicer-cost">20</span> TJ</div>
-					<div class="building-production">Each Juicer produces <span id="juicer-production-alone">0</span> TJ for a total of <span id="juicer-production-total">0</span> TJ.</div>
+					<div class="cost">Cost: <span id="juicer-cost">25</span> TJ</div>
+					<div class="building-production">Each Juicer produces <span id="juicer-production-alone">0</span> TJ/sec for a total of <span id="juicer-production-total">0</span> TJ/sec.</div>
 				</td>
 			</tr>
 
@@ -29,7 +29,7 @@
 				<td class="column-1"><img class="building-picture" src="images/farm.jpg"></td>
 				<td class="column-2">
 					<div class="building-name">Farm</div>
-					<div class="cost" id="farm-cost"></div>
+					<div class="cost">Cost: <span id="farm-cost">150</span> TJ</div>
 				</td>
 			</tr>
 
@@ -38,7 +38,7 @@
 				<td class="column-1"><img class="building-picture" src="images/factory.png"></td>
 				<td class="column-2">
 					<div class="building-name">Factory</div>
-					<div class="cost" id="factory-cost"></div>
+					<div class="cost">Cost: <span id="factory-cost">1,300</span> TJ</div>
 				</td>
 			</tr>
 
@@ -47,7 +47,7 @@
 				<td class="column-1"><img class="building-picture" src="images/office.png"></td>
 				<td class="column-2">
 					<div class="building-name">Tony Juice Inc.</div>
-					<div class="cost" id="office-cost"></div>
+					<div class="cost">Cost: <span id="office-cost">20,000</span> TJ</div>
 				</td>
 			</tr>
 
@@ -56,7 +56,7 @@
 				<td class="column-1"><img class="building-picture" src="images/elon.png"></td>
 				<td class="column-2">
 					<div class="building-name">Literally Elon Musk</div>
-					<div class="cost" id="elon-cost"></div>
+					<div class="cost">Cost: <span id="elon-cost">500,000</span> TJ</div>
 				</td>
 			</tr>
 
@@ -65,7 +65,7 @@
 				<td class="column-1"><img class="building-picture" src="images/crown.png"></td>
 				<td class="column-2">
 					<div class="building-name">Tony Juice Kingdom</div>
-					<div class="cost" id="kingdom-cost"></div>
+					<div class="cost">Cost: <span id="kingdom-cost">80,000,000</span> TJ</div>
 				</td>
 			</tr>
 
@@ -74,7 +74,7 @@
 				<td class="column-1"><img class="building-picture" src="images/planet.jpg"></td>
 				<td class="column-2">
 					<div class="building-name">Juice Planet</div>
-					<div class="cost" id="planet-cost"></div>
+					<div class="cost">Cost: <span id="planet-cost">1,000,000,000</span> TJ</div>
 				</td>
 			</tr>
 
@@ -83,7 +83,7 @@
 				<td class="column-1"><img class="building-picture" src="images/ai.png"></td>
 				<td class="column-2">
 					<div class="building-name">Artificial Intelligence</div>
-					<div class="cost" id="ai-cost"></div>
+					<div class="cost">Cost: <span id="ai-cost">99,999,999,999</span> TJ</div>
 				</td>
 			</tr>
 
