added juice bottle

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<body>
 		<h1 class="title">Tony Juice Clicker 2.0</h1>
 
+		<img id="bottle" src="images/bottle.png">
+
 		<table class="buildings-table">
 
 			<!-- Juicer -->
