--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<title>Tony Juice Clicker 2.0</title>
 
 		<link rel="stylesheet" href="styles.css"/>
+
+		<script type="text/javascript" src="juice.js"></script>
 	</head>
 
 	<body>
