--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 		<table class="buildings-table">
 
 			<!-- Juicer -->
-			<tr class="clickable">
+			<tr class="clickable" id="juicer-button">
 				<td class="column-1"><img class="building-picture" src="images/juicer.jpg"></td>
 				<td class="column-2">
 					<div class="building-name">Juicer x
 						<span class="quantity" id="juicer-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="juicer-cost">25</span> TJ</div>
+					<div class="cost">Cost: <span id="juicer-cost">50</span> TJ</div>
 				</td>
 			</tr>
 
@@ -71,7 +71,7 @@
 					<div class="building-name">Farm x
 						<span class="quantity" id="farm-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="farm-cost">150</span> TJ</div>
+					<div class="cost">Cost: <span id="farm-cost">1500</span> TJ</div>
 				</td>
 			</tr>
 
@@ -82,7 +82,7 @@
 					<div class="building-name">Factory x
 						<span class="quantity" id="factory-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="factory-cost">1,300</span> TJ</div>
+					<div class="cost">Cost: <span id="factory-cost">30,000</span> TJ</div>
 				</td>
 			</tr>
 
@@ -93,7 +93,7 @@
 					<div class="building-name">Tony Juice Inc. x
 						<span class="quantity" id="office-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="office-cost">20,000</span> TJ</div>
+					<div class="cost">Cost: <span id="office-cost">500,000</span> TJ</div>
 				</td>
 			</tr>
 
@@ -104,7 +104,7 @@
 					<div class="building-name">Literally Elon Musk x
 						<span class="quantity" id="elon-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="elon-cost">500,000</span> TJ</div>
+					<div class="cost">Cost: <span id="elon-cost">9,000,000</span> TJ</div>
 				</td>
 			</tr>
 
@@ -115,7 +115,7 @@
 					<div class="building-name">Tony Juice Kingdom x
 						<span class="quantity" id="kingdom-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="kingdom-cost">8,000,000</span> TJ</div>
+					<div class="cost">Cost: <span id="kingdom-cost">160,000,000</span> TJ</div>
 				</td>
 			</tr>
 
@@ -126,7 +126,7 @@
 					<div class="building-name">Juice Planet x
 						<span class="quantity" id="planet-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="planet-cost">100,000,000</span> TJ</div>
+					<div class="cost">Cost: <span id="planet-cost">5,000,000,000</span> TJ</div>
 				</td>
 			</tr>
 
@@ -137,7 +137,7 @@
 					<div class="building-name">Artificial Intelligence x
 						<span class="quantity" id="ai-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="ai-cost">9,999,999,999</span> TJ</div>
+					<div class="cost">Cost: <span id="ai-cost">999,999,999,999</span> TJ</div>
 				</td>
 			</tr>
 
