implemented click upgrade function

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</tr>
 			<tr>
 				<td class="row-4">
-					<button>
+					<button id="click-bonus-button">
 						<div>Click to Upgrade for <span id="click-upgrade-cost">500</span> TJ</div>
 					</button>
 				</td>
