alexa wanted me to name this commit rats, but i refused

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 			</tr>
 
 			<!-- Factory -->
-			<tr class="clickable">
+			<tr class="clickable" id="factory-button">
 				<td class="column-1"><img class="building-picture" src="images/factory.png"></td>
 				<td class="column-2">
 					<div class="building-name">Factory x
 						<span class="quantity" id="factory-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="factory-cost">not decided</span> TJ</div>
+					<div class="cost">Cost: <span id="factory-cost">35,000</span> TJ</div>
 				</td>
 			</tr>
 
