--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
 			</tr>
 
 			<!-- Tony Juice Inc. -->
-			<tr class="clickable">
+			<tr class="clickable" id="office-button">
 				<td class="column-1"><img class="building-picture" src="images/office.png"></td>
 				<td class="column-2">
 					<div class="building-name">Tony Juice Inc. x
 						<span class="quantity" id="office-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="office-cost">not decided</span> TJ</div>
+					<div class="cost">Cost: <span id="office-cost">500,000</span> TJ</div>
 				</td>
 			</tr>
 
@@ -104,7 +104,7 @@
 					<div class="building-name">Literally Elon Musk x
 						<span class="quantity" id="elon-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="elon-cost">not decided</span> TJ</div>
+					<div class="cost">Cost: <span id="elon-cost">9,000,000</span> TJ</div>
 				</td>
 			</tr>
 
@@ -115,7 +115,7 @@
 					<div class="building-name">Tony Juice Kingdom x
 						<span class="quantity" id="kingdom-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="kingdom-cost">not decided</span> TJ</div>
+					<div class="cost">Cost: <span id="kingdom-cost">20,000,000</span> TJ</div>
 				</td>
 			</tr>
 
@@ -143,7 +143,7 @@
 
 		</table>
 
-		<div class="copyright">Original Tony Juice Clicker by Tony Ngumah & Gabe Carrascoso. Remake by Keeran Sivaneri.</div>
+		<div class="copyright"><a href="https://gcarrascoso.github.io/Create-Task/Create%20Task/createtask.html">Original Tony Juice Clicker</a> by Tony Ngumah & Gabe Carrascoso. Remake by Keeran Sivaneri.</div>
 
 	</body>
 </html>
