finished functions for all buildings

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</tr>
 			<tr>
 				<td class="row-3">
-					<div>Increase your clicking power by +1% of your TJ/sec.</span></div>
+					<div>Increase your clicking power by +2% of your TJ/sec.</span></div>
 				</td>
 			</tr>
 			<tr>
@@ -71,7 +71,7 @@
 					<div class="building-name">Farm x
 						<span class="quantity" id="farm-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="farm-cost">1500</span> TJ</div>
+					<div class="cost">Cost: <span id="farm-cost">1,200</span> TJ</div>
 				</td>
 			</tr>
 
@@ -82,7 +82,7 @@
 					<div class="building-name">Factory x
 						<span class="quantity" id="factory-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="factory-cost">35,000</span> TJ</div>
+					<div class="cost">Cost: <span id="factory-cost">11,000</span> TJ</div>
 				</td>
 			</tr>
 
@@ -93,57 +93,57 @@
 					<div class="building-name">Tony Juice Inc. x
 						<span class="quantity" id="office-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="office-cost">500,000</span> TJ</div>
+					<div class="cost">Cost: <span id="office-cost">75,000</span> TJ</div>
 				</td>
 			</tr>
 
 			<!-- Literally Elon Musk -->
-			<tr class="clickable">
+			<tr class="clickable" id="elon-button">
 				<td class="column-1"><img class="building-picture" src="images/elon.png"></td>
 				<td class="column-2">
 					<div class="building-name">Literally Elon Musk x
 						<span class="quantity" id="elon-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="elon-cost">9,000,000</span> TJ</div>
+					<div class="cost">Cost: <span id="elon-cost">500,000</span> TJ</div>
 				</td>
 			</tr>
 
 			<!-- Tony Juice Kingdom -->
-			<tr class="clickable">
+			<tr class="clickable" id="kingdom-button">
 				<td class="column-1"><img class="building-picture" src="images/crown.png"></td>
 				<td class="column-2">
 					<div class="building-name">Tony Juice Kingdom x
 						<span class="quantity" id="kingdom-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="kingdom-cost">20,000,000</span> TJ</div>
+					<div class="cost">Cost: <span id="kingdom-cost">2,500,000</span> TJ</div>
 				</td>
 			</tr>
 
 			<!-- Juice Planet -->
-			<tr class="clickable">
+			<tr class="clickable" id="planet-button">
 				<td class="column-1"><img class="building-picture" src="images/planet.jpg"></td>
 				<td class="column-2">
 					<div class="building-name">Juice Planet x
 						<span class="quantity" id="planet-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="planet-cost">not decided</span> TJ</div>
+					<div class="cost">Cost: <span id="planet-cost">70,000,000</span> TJ</div>
 				</td>
 			</tr>
 
 			<!-- Artificial Intelligence -->
-			<tr class="clickable">
+			<tr class="clickable" id="ai-button">
 				<td class="column-1"><img class="building-picture" src="images/ai.png"></td>
 				<td class="column-2">
 					<div class="building-name">Artificial Intelligence x
 						<span class="quantity" id="ai-quantity">0</span>
 					</div>
-					<div class="cost">Cost: <span id="ai-cost">not decided</span> TJ</div>
+					<div class="cost">Cost: <span id="ai-cost">9,999,999,999</span> TJ</div>
 				</td>
 			</tr>
 
 		</table>
 
-		<div class="copyright"><a href="https://gcarrascoso.github.io/Create-Task/Create%20Task/createtask.html">Original Tony Juice Clicker</a> by Tony Ngumah & Gabe Carrascoso. Remake by Keeran Sivaneri.</div>
+		<div class="copyright"><a href="https://gcarrascoso.github.io/Create-Task/Create%20Task/createtask.html" target="_blank">Original Tony Juice Clicker</a> by <em>angumah</em> & <em>gcarrascoso</em> on GitHub. Remake by <em>ksivaneri001</em>.</div>
 
 	</body>
 </html>
